# phasebook

./: Dockerfile  README.md  docker-compose.yaml  prestart.sh
backend/: .gitignore  alembic.ini  main.py  models.py  prestart.sh  pyproject.toml  redis_cache_docs.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 3c88213e57bb_remove_user_sessions.py  50926ca41f8b_init_tables.py  53ba808266d2_add_action_by_id_in_friendship.py  5b47c8eeaa1b_fix.py  5c37770b4370_fix_cascades.py  7772369a765d_add_friendships.py  853207af23ac_change_comment_model.py  916c3754dd45_add_chats.py  beb201f13bd7_test.py  c8deb8076384_change_naming_in_comment.py  d3326b0b2588_update_post_model.py  d46c482d894d_add_created_at_timestamps.py  d52eb96ec340_fix_relations.py  dbbec284832e_unique_constraint.py  e3180f9a3bfe_fix_relations.py  e663f4f585af_add_email_verification.py  f869c6f67773_add_providers_table.py  fdbe92c6be3d_add_sessions_table.py
backend/core/: config.py  limiter.py  security.py
backend/database/: database.py  redis.py  reset.txt
backend/database/models/: __init_.py  __init__.py  _mixins.py  comment.py  friendship.py  post.py  provider.py  user.py
backend/endpoints/: ai.py  auth.py  comments.py  posts.py  users.py
backend/schemas/: comment.py  post.py  user.py
backend/services/account_management/: delete_user_account.py  generate_user_cache.py  update_bio.py  update_username.py
backend/services/ai/: chatbot.py
backend/services/comments/: comment_response.py  make_comment.py  read_replies.py  remove_comment.py  update_comment.py
(+35 files in other folders)
