[project]
name = "oauth2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.8",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.129.0",
    "itsdangerous>=2.2.0",
    "jwt>=1.4.0",
    "pwdlib[argon2]>=0.3.0",
    "redis>=7.1.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "websockets>=16.0",
]
